# tomgrad

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh  scratchpad.c  tests.c  tomgrad.h  tomgrad.sh
examples/: example.cpp
include/tomgrad/: tomgrad.hpp
scratchpad/: scratchpad.c  scratchpad.cpp
tests/: test_tensor.cpp  tests.c
tomgrad/: tomgrad.c  tomgrad.h
